Adjust gap and max-width of the project screenshots to improve the layout, prevent images from being cut vertically

--- a/src/styles/Project.module.css
+++ b/src/styles/Project.module.css
@@ -93,14 +93,10 @@
   aspect-ratio: 1/1;
 }
 
-.mockup div {
-  border-radius: 0.5rem;
-  box-shadow: 15px 15px 25px 5px rgba(0, 0, 0, 0.342);
-  overflow: hidden;
-}
-
 .mockup img {
   display: block;
+  border-radius: 0.5rem;
+  box-shadow: 12px 12px 20px 5px rgba(0, 0, 0, 0.342);
   width: 100%;
 }
 
@@ -133,6 +129,10 @@
   .mock_4 {
     max-height: 40vh;
   }
+
+  .mockup {
+    gap: 15%;
+  }
 }
 
 @media only screen and (min-width: 992px) {
@@ -152,6 +152,10 @@
     font-size: 0.9rem;
   }
 
+  .mockup {
+    gap: 20%;
+  }
+
   .mockup_2,
   .mockup_4 {
     aspect-ratio: 5/4;
@@ -159,7 +163,7 @@
 
   .mock_2,
   .mock_4 {
-    max-width: 40%;
+    max-width: 38%;
   }
 }
 
